<resources>
    <string name="app_name">Parking Management System</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="generate_report">Generate Report</string>
    <string name="manage_user_profile">Manage User Profile</string>
    <string name="admin">ADMIN</string>
    <string name="parking_income_by_day">Parking Income by Day:</string>
    <string name="enter_username">Enter Username</string>
    <string name="search_user">Search User</string>
    <string name="license_plate">License Plate</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="parking_history">Parking History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="parking">PARKING</string>
    <string name="map_guidance">Map Guidance</string>
    <string name="assign_parking_for_me">Assign Parking For Me</string>
    <string name="assigned_parking_slot">Assigned Parking Slot:</string>
    <string name="cancel_assignment">Cancel Assignment</string>
    <string name="check_in_time">Check-In Time:</string>
    <string name="register">Register</string>
    <string name="parking_management_system">PARKING MANAGEMENT SYSTEM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="account">Account</string>
    <string name="parking_a_block_k">Parking A Block K</string>
    <string name="parking_b_citc">Parking B CITC</string>
    <string name="parking_c_east_campus">Parking C EAST CAMPUS</string>
    <string name="assign_parking">Assign Parking</string>
    <string name="membership_subcription">Membership Subcription</string>
    <string name="_3_months_rm10">3 Months (RM10)</string>
    <string name="membership_subscription">Membership Subscription</string>
    <string name="top_up_now_to_get_your_parking_slot">Top Up now to get your parking slot</string>
    <string name="top_up">Top Up</string>
    <string name="account_balance_top_up">Account Balance Top Up</string>
    <string name="_1_month_rm5">1 Month (RM5)</string>
    <string name="_6_months_rm20">6 Months (RM20)</string>
    <string name="get_my_parking_now">Get My Parking Now</string>
    <string name="registration">Registration</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="nric">nric</string>
    <string name="enter_nric">Enter NRIC</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="vehicle_license_plate">Vehicle License Plate</string>
    <string name="enter_vehicle_license_plate">Enter vehicle license plate</string>
    <string name="email_address">Email Address</string>
    <string name="membership_status">Membership Status</string>
    <string name="account_balance">Account Balance</string>
    <string name="logout">Logout</string>
    <string name="payment">Payment</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>