<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignParkingActivity">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:text="@string/profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/parkingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="290dp"
            android:textSize="15dp"
            android:background="@android:color/transparent"
            android:text="@string/parking"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

        <!-- Account Button -->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <Button
            android:id="@+id/mapGuidanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:layout_marginTop="60dp"
            android:text="@string/map_guidance" />

        <GridLayout
            android:id="@+id/parkingSlotLayout"
            android:layout_width="346dp"
            android:layout_height="370dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:columnCount="8"
            android:rowCount="5">

        </GridLayout>

        <Spinner
            android:id="@+id/destinationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/parkingHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/assign_parking_for_me"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/assignedSpotTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assigned_parking_slot"
            android:textSize="18sp"
            android:visibility="gone" /> <!-- Initially hidden -->

        <Button
            android:id="@+id/cancelAssignmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_assignment"
            android:visibility="gone" /> <!-- Initially hidden -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/check_in_time"
            android:textSize="16sp"
            android:visibility="gone" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

