<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="#000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:text="@string/profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </RelativeLayout>


    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="#5A5A5A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vehiclePlateLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vehicle_license_plate"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp"
                />

            <TextView
                android:id="@+id/vehiclePlateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A5A5A"/>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/vehiclePlateLabelTextView"
                android:text="@string/email_address"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp"
                />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/vehiclePlateTextView"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A5A5A"/>

        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/emailLabelTextView"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp" />


            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/emailTextView"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A5A5A"/>

        <!-- Row 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/balanceTextView"
                android:text="@string/membership_status"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp" />

            <TextView
                android:id="@+id/membershipStatusTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/balanceTextView"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A5A5A"/>

        <!-- Row 5 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/phoneTextView"
                android:text="@string/account_balance"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp" />


            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/phoneTextView"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingStart="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5A5A5A"/>

    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:onClick="onLogoutButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E13B3B"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/parkingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#4CAF50"
        android:onClick="onParkingButtonClick"
        android:text="@string/parking"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />/>
</androidx.constraintlayout.widget.ConstraintLayout>
